--- a/Main/index.html
+++ b/Main/index.html
@@ -98,66 +98,91 @@
               fill="#FFFEF7"
             />
           </svg>
-          <nav class="header__nav">
-            <a href="" class="nav__link">PROJECT</a>
-            <a href="" class="nav__link">TEAM</a>
-            <a href="" class="nav__link">ABOUT US</a>
-            <a href="" class="nav__link">CONTACT US</a>
-            <a href="" class="nav__link">HISTORY</a>
-            <a href="" class="nav__link">REVIEWS</a>
-          </nav>
-          <div class="language-dropdown">
-            <button
-              class="btn dropdown-toggle"
-              type="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              EN
-            </button>
-            <ul class="dropdown-menu custom-width">
-              <li><a class="dropdown-item" href="#">EN</a></li>
-              <li><a class="dropdown-item" href="#">UA</a></li>
-            </ul>
+          <svg
+            class="header__logo-adaptive"
+            width="49"
+            height="40"
+            viewBox="0 0 49 40"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M36.2501 20.3469C37.3286 18.4293 38.4147 17.0035 39.6734 15.9249C38.9766 14.347 38.3974 13.2458 38.9928 11.9677C39.4243 11.0278 39.7551 10.0448 39.9797 9.03516C39.9797 9.03516 41.6126 10.4017 41.5112 11.9925C41.4098 13.5834 40.9309 14.6274 40.4995 15.2799C41.0555 14.8875 41.6453 14.5454 42.2619 14.2575C43.1247 13.0409 43.5011 11.8998 44.832 11.6797C46.1263 11.464 47.2706 11.7984 48.2133 10.9161C48.2133 10.9161 47.1477 14.4214 45.2775 14.8539C44.2755 15.0721 43.2335 15.0212 42.2576 14.7062C41.562 15.0452 40.9044 15.457 40.2957 15.9346C41.2853 15.6732 42.3282 15.6926 43.3074 15.9908C44.2866 16.2889 45.1634 16.854 45.8394 17.6225C45.0284 17.7334 44.2284 17.9139 43.4483 18.1618C41.6622 18.7205 40.2558 16.874 39.8643 16.2905C38.6703 17.3367 37.6317 18.7054 36.5984 20.5432C36.5864 20.5682 36.5694 20.5905 36.5485 20.6087C36.5275 20.6268 36.503 20.6405 36.4766 20.6488C36.4501 20.6572 36.4223 20.66 36.3947 20.6571C36.3671 20.6542 36.3404 20.6458 36.3162 20.6322C36.2921 20.6186 36.2709 20.6001 36.2542 20.5781C36.2374 20.556 36.2253 20.5307 36.2187 20.5037C36.2121 20.4768 36.2111 20.4488 36.2158 20.4215C36.2204 20.3941 36.2306 20.368 36.2457 20.3448L36.2501 20.3469Z"
+              fill="#FFEE58"
+            />
+            <path
+              d="M26.7667 18.0337C26.6901 18.1415 26.6125 18.2386 26.5359 18.34C24.5676 12.8965 20.2415 10.0869 16.4688 7.57177C16.6553 6.61617 17.2777 5.66166 18.1944 5.32515C18.8006 6.18799 19.8575 7.24065 21.0838 7.79071C20.3051 7.13219 19.6618 6.32849 19.1899 5.42438C17.68 2.46916 20.1973 -0.229357 21.4268 0.0154728C21.8086 4.72117 27.8064 8.64384 29.6 15.1809C28.6725 15.8151 27.7212 16.7491 26.7667 18.0337Z"
+              fill="#FFEE58"
+            />
+            <path
+              d="M2.33104 33.0979C3.84964 33.072 4.8117 32.6384 4.8117 32.6384C4.8117 32.6384 3.65873 32.8779 2.07543 32.4799C1.24279 32.2707 0.872848 31.8036 0.793035 30.9516C0.71538 30.1287 1.41752 29.7889 1.92767 29.5894C3.69864 29.8515 4.34469 29.5678 4.34469 29.5678C4.34469 29.5678 2.88542 29.4028 2.12288 29.0458C0.712146 28.3857 0.181499 26.3365 2.69343 26.0604C3.46891 26.6201 4.70061 26.9178 4.70061 26.9178C4.03515 26.4929 3.21114 26.0323 2.93503 25.67C2.33428 24.8826 2.78188 24.1147 3.59833 23.8634C5.48795 23.2788 7.95782 28.609 12.2515 28.4591C13.5145 28.4138 14.9209 28.0783 16.3942 27.47C14.5844 27.7548 11.3315 27.5132 10.8936 25.5988C10.8371 25.3133 10.841 25.0192 10.9051 24.7353C10.9691 24.4515 11.092 24.1842 11.2657 23.9507C11.8078 23.8693 12.332 23.6957 12.8156 23.4374C12.8156 23.4374 10.1009 23.7081 8.91665 22.4084C8.33423 21.7699 8.40218 20.8036 8.65995 20.4217C9.86258 20.5632 11.0812 20.4698 12.2483 20.1467C11.4092 20.1475 10.5718 20.0732 9.74605 19.9245C9.14297 19.819 8.59074 19.5197 8.17306 19.0721C7.75539 18.6244 7.49504 18.0528 7.43149 17.4439C7.35491 16.6598 7.47139 15.8347 7.8532 15.2113C9.70614 16.0741 11.9031 15.7506 11.9031 15.7506C10.7549 15.65 9.64804 15.2729 8.67721 14.6515C7.0238 13.5881 7.17479 10.9273 8.18431 9.71825C9.03421 10.5692 10.3835 11.2789 11.9053 11.5572C11.9053 11.5572 9.26933 10.36 8.12499 7.79197C7.83691 7.0386 7.73336 6.22722 7.823 5.42564C8.1649 2.73683 9.65653 2.10156 9.65653 2.10156C12.3076 7.9462 23.3293 9.43568 26.251 19.6819C26.5458 19.318 26.8363 18.9434 27.1225 18.558C31.221 13.0283 35.2774 14.0066 37.6642 17.2638C37.9899 17.7066 38.2785 18.1755 38.527 18.6659C38.527 18.6659 33.1731 19.5751 33.5927 24.2225C33.8257 26.7949 34.9948 31.3485 33.2691 34.9163C32.3189 36.8804 30.493 38.5467 27.1473 39.4182C27.0039 39.4559 26.8604 39.4904 26.7159 39.526C17.2969 41.7554 12.4101 35.4373 9.7234 35.1385C6.96987 34.8333 2.64058 37.2298 1.78745 35.091C1.42291 34.1861 1.91041 33.4581 2.33104 33.0979Z"
+              fill="#FFEE58"
+            />
+          </svg>
+          <div class="header__wrapper">
+            <nav class="header__nav">
+              <a href="" class="nav__link">PROJECT</a>
+              <a href="" class="nav__link">TEAM</a>
+              <a href="" class="nav__link">ABOUT US</a>
+              <a href="" class="nav__link">CONTACT US</a>
+              <a href="" class="nav__link">HISTORY</a>
+              <a href="" class="nav__link">REVIEWS</a>
+            </nav>
+            <div class="language-dropdown">
+              <button
+                class="btn dropdown-toggle"
+                type="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                EN
+              </button>
+              <ul class="dropdown-menu custom-width">
+                <li><a class="dropdown-item" href="#">EN</a></li>
+                <li><a class="dropdown-item" href="#">UA</a></li>
+              </ul>
+            </div>
+            <div class="header__contact">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M17.62 10.7501C17.19 10.7501 16.85 10.4001 16.85 9.9801C16.85 9.6101 16.48 8.8401 15.86 8.1701C15.25 7.5201 14.58 7.1401 14.02 7.1401C13.59 7.1401 13.25 6.7901 13.25 6.3701C13.25 5.9501 13.6 5.6001 14.02 5.6001C15.02 5.6001 16.07 6.1401 16.99 7.1101C17.85 8.0201 18.4 9.1501 18.4 9.9701C18.4 10.4001 18.05 10.7501 17.62 10.7501Z"
+                  fill="#FFFEF7"
+                />
+                <path
+                  d="M21.23 10.75C20.8 10.75 20.46 10.4 20.46 9.98C20.46 6.43 17.57 3.55 14.03 3.55C13.6 3.55 13.26 3.2 13.26 2.78C13.26 2.36 13.6 2 14.02 2C18.42 2 22 5.58 22 9.98C22 10.4 21.65 10.75 21.23 10.75Z"
+                  fill="#FFFEF7"
+                />
+                <path
+                  d="M11.05 14.95L9.2 16.8C8.81 17.19 8.19 17.19 7.79 16.81C7.68 16.7 7.57 16.6 7.46 16.49C6.43 15.45 5.5 14.36 4.67 13.22C3.85 12.08 3.19 10.94 2.71 9.81C2.24 8.67 2 7.58 2 6.54C2 5.86 2.12 5.21 2.36 4.61C2.6 4 2.98 3.44 3.51 2.94C4.15 2.31 4.85 2 5.59 2C5.87 2 6.15 2.06 6.4 2.18C6.66 2.3 6.89 2.48 7.07 2.74L9.39 6.01C9.57 6.26 9.7 6.49 9.79 6.71C9.88 6.92 9.93 7.13 9.93 7.32C9.93 7.56 9.86 7.8 9.72 8.03C9.59 8.26 9.4 8.5 9.16 8.74L8.4 9.53C8.29 9.64 8.24 9.77 8.24 9.93C8.24 10.01 8.25 10.08 8.27 10.16C8.3 10.24 8.33 10.3 8.35 10.36C8.53 10.69 8.84 11.12 9.28 11.64C9.73 12.16 10.21 12.69 10.73 13.22C10.83 13.32 10.94 13.42 11.04 13.52C11.44 13.91 11.45 14.55 11.05 14.95Z"
+                  fill="#FFFEF7"
+                />
+                <path
+                  d="M21.9701 18.33C21.9701 18.61 21.9201 18.9 21.8201 19.18C21.7901 19.26 21.7601 19.34 21.7201 19.42C21.5501 19.78 21.3301 20.12 21.0401 20.44C20.5501 20.98 20.0101 21.37 19.4001 21.62C19.3901 21.62 19.3801 21.63 19.3701 21.63C18.7801 21.87 18.1401 22 17.4501 22C16.4301 22 15.3401 21.76 14.1901 21.27C13.0401 20.78 11.8901 20.12 10.7501 19.29C10.3601 19 9.9701 18.71 9.6001 18.4L12.8701 15.13C13.1501 15.34 13.4001 15.5 13.6101 15.61C13.6601 15.63 13.7201 15.66 13.7901 15.69C13.8701 15.72 13.9501 15.73 14.0401 15.73C14.2101 15.73 14.3401 15.67 14.4501 15.56L15.2101 14.81C15.4601 14.56 15.7001 14.37 15.9301 14.25C16.1601 14.11 16.3901 14.04 16.6401 14.04C16.8301 14.04 17.0301 14.08 17.2501 14.17C17.4701 14.26 17.7001 14.39 17.9501 14.56L21.2601 16.91C21.5201 17.09 21.7001 17.3 21.8101 17.55C21.9101 17.8 21.9701 18.05 21.9701 18.33Z"
+                  fill="#FFFEF7"
+                />
+              </svg>
+              <p>066 517 71 99</p>
+            </div>
           </div>
-          <div class="header__contact">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M17.62 10.7501C17.19 10.7501 16.85 10.4001 16.85 9.9801C16.85 9.6101 16.48 8.8401 15.86 8.1701C15.25 7.5201 14.58 7.1401 14.02 7.1401C13.59 7.1401 13.25 6.7901 13.25 6.3701C13.25 5.9501 13.6 5.6001 14.02 5.6001C15.02 5.6001 16.07 6.1401 16.99 7.1101C17.85 8.0201 18.4 9.1501 18.4 9.9701C18.4 10.4001 18.05 10.7501 17.62 10.7501Z"
-                fill="#FFFEF7"
-              />
-              <path
-                d="M21.23 10.75C20.8 10.75 20.46 10.4 20.46 9.98C20.46 6.43 17.57 3.55 14.03 3.55C13.6 3.55 13.26 3.2 13.26 2.78C13.26 2.36 13.6 2 14.02 2C18.42 2 22 5.58 22 9.98C22 10.4 21.65 10.75 21.23 10.75Z"
-                fill="#FFFEF7"
-              />
-              <path
-                d="M11.05 14.95L9.2 16.8C8.81 17.19 8.19 17.19 7.79 16.81C7.68 16.7 7.57 16.6 7.46 16.49C6.43 15.45 5.5 14.36 4.67 13.22C3.85 12.08 3.19 10.94 2.71 9.81C2.24 8.67 2 7.58 2 6.54C2 5.86 2.12 5.21 2.36 4.61C2.6 4 2.98 3.44 3.51 2.94C4.15 2.31 4.85 2 5.59 2C5.87 2 6.15 2.06 6.4 2.18C6.66 2.3 6.89 2.48 7.07 2.74L9.39 6.01C9.57 6.26 9.7 6.49 9.79 6.71C9.88 6.92 9.93 7.13 9.93 7.32C9.93 7.56 9.86 7.8 9.72 8.03C9.59 8.26 9.4 8.5 9.16 8.74L8.4 9.53C8.29 9.64 8.24 9.77 8.24 9.93C8.24 10.01 8.25 10.08 8.27 10.16C8.3 10.24 8.33 10.3 8.35 10.36C8.53 10.69 8.84 11.12 9.28 11.64C9.73 12.16 10.21 12.69 10.73 13.22C10.83 13.32 10.94 13.42 11.04 13.52C11.44 13.91 11.45 14.55 11.05 14.95Z"
-                fill="#FFFEF7"
-              />
-              <path
-                d="M21.9701 18.33C21.9701 18.61 21.9201 18.9 21.8201 19.18C21.7901 19.26 21.7601 19.34 21.7201 19.42C21.5501 19.78 21.3301 20.12 21.0401 20.44C20.5501 20.98 20.0101 21.37 19.4001 21.62C19.3901 21.62 19.3801 21.63 19.3701 21.63C18.7801 21.87 18.1401 22 17.4501 22C16.4301 22 15.3401 21.76 14.1901 21.27C13.0401 20.78 11.8901 20.12 10.7501 19.29C10.3601 19 9.9701 18.71 9.6001 18.4L12.8701 15.13C13.1501 15.34 13.4001 15.5 13.6101 15.61C13.6601 15.63 13.7201 15.66 13.7901 15.69C13.8701 15.72 13.9501 15.73 14.0401 15.73C14.2101 15.73 14.3401 15.67 14.4501 15.56L15.2101 14.81C15.4601 14.56 15.7001 14.37 15.9301 14.25C16.1601 14.11 16.3901 14.04 16.6401 14.04C16.8301 14.04 17.0301 14.08 17.2501 14.17C17.4701 14.26 17.7001 14.39 17.9501 14.56L21.2601 16.91C21.5201 17.09 21.7001 17.3 21.8101 17.55C21.9101 17.8 21.9701 18.05 21.9701 18.33Z"
-                fill="#FFFEF7"
-              />
-            </svg>
-            066 517 71 99
+
+          <div class="burger">
+            <span></span>
           </div>
         </div>
       </header>
       <main class="main">
         <div class="main__block-1">
-          <h1 class="block-1__title">cultura contra <br />balas</h1>
+          <h1 class="block-1__title">cultura <br />contra balas</h1>
           <p class="block-1__paragraph">
             (CCB) is a non-profit organization that uses culture as a tool
-            against<br />
-            violence. Through cultural and educational events, CCB unites Spain
-            <br />
-            and countries affected by armed conflict.
+            against violence. Through cultural and educational events, CCB
+            unites Spain and countries affected by armed conflict.
           </p>
           <div class="block-1__circle">ABOUT US</div>
         </div>
@@ -747,10 +772,10 @@
           <p class="bot__2024">© 2024</p>
           <a class="bot__design">Design</a>
           <div class="bot__group">
-            <div class="bot__icon">TG</div>
-            <div class="bot__icon">FB</div>
-            <div class="bot__icon">TT</div>
-            <div class="bot__icon">LN</div>
+            <a class="bot__icon">TG</a>
+            <a class="bot__icon">FB</a>
+            <a class="bot__icon">TT</a>
+            <a class="bot__icon">LN</a>
           </div>
         </div>
       </div>
