--- a/Main/index.html
+++ b/Main/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <div class="body__container">
-      <header class="header">
+      <header class="header _container">
         <div class="header__body">
           <svg
             class="header__logo"
@@ -119,128 +119,154 @@
               fill="#FFEE58"
             />
           </svg>
-          <div class="header__wrapper">
-            <nav class="header__nav">
-              <a href="" class="nav__link">PROJECT</a>
-              <a href="" class="nav__link">TEAM</a>
-              <a href="" class="nav__link">ABOUT US</a>
-              <a href="" class="nav__link">CONTACT US</a>
-              <a href="" class="nav__link">HISTORY</a>
-              <a href="" class="nav__link">REVIEWS</a>
-            </nav>
-            <div class="language-dropdown">
-              <button
-                class="btn dropdown-toggle"
-                type="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                EN
-              </button>
-              <ul class="dropdown-menu custom-width">
-                <li><a class="dropdown-item" href="#">EN</a></li>
-                <li><a class="dropdown-item" href="#">UA</a></li>
-              </ul>
-            </div>
-            <div class="header__contact">
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M17.62 10.7501C17.19 10.7501 16.85 10.4001 16.85 9.9801C16.85 9.6101 16.48 8.8401 15.86 8.1701C15.25 7.5201 14.58 7.1401 14.02 7.1401C13.59 7.1401 13.25 6.7901 13.25 6.3701C13.25 5.9501 13.6 5.6001 14.02 5.6001C15.02 5.6001 16.07 6.1401 16.99 7.1101C17.85 8.0201 18.4 9.1501 18.4 9.9701C18.4 10.4001 18.05 10.7501 17.62 10.7501Z"
-                  fill="#FFFEF7"
-                />
-                <path
-                  d="M21.23 10.75C20.8 10.75 20.46 10.4 20.46 9.98C20.46 6.43 17.57 3.55 14.03 3.55C13.6 3.55 13.26 3.2 13.26 2.78C13.26 2.36 13.6 2 14.02 2C18.42 2 22 5.58 22 9.98C22 10.4 21.65 10.75 21.23 10.75Z"
-                  fill="#FFFEF7"
-                />
-                <path
-                  d="M11.05 14.95L9.2 16.8C8.81 17.19 8.19 17.19 7.79 16.81C7.68 16.7 7.57 16.6 7.46 16.49C6.43 15.45 5.5 14.36 4.67 13.22C3.85 12.08 3.19 10.94 2.71 9.81C2.24 8.67 2 7.58 2 6.54C2 5.86 2.12 5.21 2.36 4.61C2.6 4 2.98 3.44 3.51 2.94C4.15 2.31 4.85 2 5.59 2C5.87 2 6.15 2.06 6.4 2.18C6.66 2.3 6.89 2.48 7.07 2.74L9.39 6.01C9.57 6.26 9.7 6.49 9.79 6.71C9.88 6.92 9.93 7.13 9.93 7.32C9.93 7.56 9.86 7.8 9.72 8.03C9.59 8.26 9.4 8.5 9.16 8.74L8.4 9.53C8.29 9.64 8.24 9.77 8.24 9.93C8.24 10.01 8.25 10.08 8.27 10.16C8.3 10.24 8.33 10.3 8.35 10.36C8.53 10.69 8.84 11.12 9.28 11.64C9.73 12.16 10.21 12.69 10.73 13.22C10.83 13.32 10.94 13.42 11.04 13.52C11.44 13.91 11.45 14.55 11.05 14.95Z"
-                  fill="#FFFEF7"
-                />
-                <path
-                  d="M21.9701 18.33C21.9701 18.61 21.9201 18.9 21.8201 19.18C21.7901 19.26 21.7601 19.34 21.7201 19.42C21.5501 19.78 21.3301 20.12 21.0401 20.44C20.5501 20.98 20.0101 21.37 19.4001 21.62C19.3901 21.62 19.3801 21.63 19.3701 21.63C18.7801 21.87 18.1401 22 17.4501 22C16.4301 22 15.3401 21.76 14.1901 21.27C13.0401 20.78 11.8901 20.12 10.7501 19.29C10.3601 19 9.9701 18.71 9.6001 18.4L12.8701 15.13C13.1501 15.34 13.4001 15.5 13.6101 15.61C13.6601 15.63 13.7201 15.66 13.7901 15.69C13.8701 15.72 13.9501 15.73 14.0401 15.73C14.2101 15.73 14.3401 15.67 14.4501 15.56L15.2101 14.81C15.4601 14.56 15.7001 14.37 15.9301 14.25C16.1601 14.11 16.3901 14.04 16.6401 14.04C16.8301 14.04 17.0301 14.08 17.2501 14.17C17.4701 14.26 17.7001 14.39 17.9501 14.56L21.2601 16.91C21.5201 17.09 21.7001 17.3 21.8101 17.55C21.9101 17.8 21.9701 18.05 21.9701 18.33Z"
-                  fill="#FFFEF7"
-                />
-              </svg>
-              <p>066 517 71 99</p>
-            </div>
-          </div>
+          <nav class="header__nav">
+            <ul class="nav__list">
+              <li class="list__item">
+                <a href="" class="nav__link">PROJECT</a>
+              </li>
+              <li class="list__item">
+                <a href="" class="nav__link">TEAM</a>
+              </li>
+              <li class="list__item">
+                <a href="" class="nav__link">ABOUT US</a>
+              </li>
+              <li class="list__item">
+                <a href="" class="nav__link">CONTACT US</a>
+              </li>
+              <li class="list__item">
+                <a href="" class="nav__link">HISTORY</a>
+              </li>
+              <li class="list__item">
+                <a href="" class="nav__link">REVIEWS</a>
+              </li>
+              <li class="list__item">
+                <div class="language-dropdown">
+                  <button
+                    class="btn dropdown-toggle"
+                    type="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    EN
+                  </button>
+                  <ul class="dropdown-menu custom-width">
+                    <li><a class="dropdown-item" href="#">EN</a></li>
+                    <li><a class="dropdown-item" href="#">UA</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="list__item">
+                <div class="header__contact">
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M17.62 10.7501C17.19 10.7501 16.85 10.4001 16.85 9.9801C16.85 9.6101 16.48 8.8401 15.86 8.1701C15.25 7.5201 14.58 7.1401 14.02 7.1401C13.59 7.1401 13.25 6.7901 13.25 6.3701C13.25 5.9501 13.6 5.6001 14.02 5.6001C15.02 5.6001 16.07 6.1401 16.99 7.1101C17.85 8.0201 18.4 9.1501 18.4 9.9701C18.4 10.4001 18.05 10.7501 17.62 10.7501Z"
+                      fill="#FFFEF7"
+                    />
+                    <path
+                      d="M21.23 10.75C20.8 10.75 20.46 10.4 20.46 9.98C20.46 6.43 17.57 3.55 14.03 3.55C13.6 3.55 13.26 3.2 13.26 2.78C13.26 2.36 13.6 2 14.02 2C18.42 2 22 5.58 22 9.98C22 10.4 21.65 10.75 21.23 10.75Z"
+                      fill="#FFFEF7"
+                    />
+                    <path
+                      d="M11.05 14.95L9.2 16.8C8.81 17.19 8.19 17.19 7.79 16.81C7.68 16.7 7.57 16.6 7.46 16.49C6.43 15.45 5.5 14.36 4.67 13.22C3.85 12.08 3.19 10.94 2.71 9.81C2.24 8.67 2 7.58 2 6.54C2 5.86 2.12 5.21 2.36 4.61C2.6 4 2.98 3.44 3.51 2.94C4.15 2.31 4.85 2 5.59 2C5.87 2 6.15 2.06 6.4 2.18C6.66 2.3 6.89 2.48 7.07 2.74L9.39 6.01C9.57 6.26 9.7 6.49 9.79 6.71C9.88 6.92 9.93 7.13 9.93 7.32C9.93 7.56 9.86 7.8 9.72 8.03C9.59 8.26 9.4 8.5 9.16 8.74L8.4 9.53C8.29 9.64 8.24 9.77 8.24 9.93C8.24 10.01 8.25 10.08 8.27 10.16C8.3 10.24 8.33 10.3 8.35 10.36C8.53 10.69 8.84 11.12 9.28 11.64C9.73 12.16 10.21 12.69 10.73 13.22C10.83 13.32 10.94 13.42 11.04 13.52C11.44 13.91 11.45 14.55 11.05 14.95Z"
+                      fill="#FFFEF7"
+                    />
+                    <path
+                      d="M21.9701 18.33C21.9701 18.61 21.9201 18.9 21.8201 19.18C21.7901 19.26 21.7601 19.34 21.7201 19.42C21.5501 19.78 21.3301 20.12 21.0401 20.44C20.5501 20.98 20.0101 21.37 19.4001 21.62C19.3901 21.62 19.3801 21.63 19.3701 21.63C18.7801 21.87 18.1401 22 17.4501 22C16.4301 22 15.3401 21.76 14.1901 21.27C13.0401 20.78 11.8901 20.12 10.7501 19.29C10.3601 19 9.9701 18.71 9.6001 18.4L12.8701 15.13C13.1501 15.34 13.4001 15.5 13.6101 15.61C13.6601 15.63 13.7201 15.66 13.7901 15.69C13.8701 15.72 13.9501 15.73 14.0401 15.73C14.2101 15.73 14.3401 15.67 14.4501 15.56L15.2101 14.81C15.4601 14.56 15.7001 14.37 15.9301 14.25C16.1601 14.11 16.3901 14.04 16.6401 14.04C16.8301 14.04 17.0301 14.08 17.2501 14.17C17.4701 14.26 17.7001 14.39 17.9501 14.56L21.2601 16.91C21.5201 17.09 21.7001 17.3 21.8101 17.55C21.9101 17.8 21.9701 18.05 21.9701 18.33Z"
+                      fill="#FFFEF7"
+                    />
+                  </svg>
+                  <p>066 517 71 99</p>
+                </div>
+              </li>
+            </ul>
+          </nav>
 
           <div class="burger">
             <span></span>
           </div>
         </div>
       </header>
-      <main class="main">
-        <div class="main__block-1">
-          <h1 class="block-1__title">cultura <br />contra balas</h1>
-          <p class="block-1__paragraph">
-            (CCB) is a non-profit organization that uses culture as a tool
-            against violence. Through cultural and educational events, CCB
-            unites Spain and countries affected by armed conflict.
-          </p>
-          <div class="block-1__circle">ABOUT US</div>
-        </div>
-        <div class="main__block-2">
-          <div class="block-2__content">
-            <div class="content__title">Who we are?</div>
-            <div class="content__text">
-              <p>
-                The NGO is a space for psychological rehabilitation and
-                development. All of its projects are based on the work and
-                support of dedicated volunteers. Led by a strong belief in
-                humanity, we encourage everyone to spread kindness and inspire
-                others!
-              </p>
-              <button>READ MORE</button>
-            </div>
-          </div>
-          <div class="block-2__slider">
-            <div class="slider__wrapper">
-              <img
-                src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                alt=""
-                class="slider__img"
-              />
-              <img
-                src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                alt=""
-                class="slider__img"
-              />
 
-              <img
-                src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                alt=""
-                class="slider__img"
-              />
-              <img
-                src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                alt=""
-                class="slider__img"
-              />
-              <img
-                src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                alt=""
-                class="slider__img"
-              />
-              <img
-                src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                alt=""
-                class="slider__img"
-              />
-              <img
-                src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                alt=""
-                class="slider__img"
-              />
+      <main class="page">
+        <div class="page__main-block-1 main-block">
+          <div class="main__block-1 _container">
+            <h1 class="block-1__title">cultura contra balas</h1>
+            <p class="block-1__paragraph">
+              (CCB) is a non-profit organization that uses culture as a tool
+              against violence. Through cultural and educational events, CCB
+              unites Spain and countries affected by armed conflict.
+            </p>
+            <a href="../About Us/index.html" class="block-1__circle"
+              >ABOUT US</a
+            >
+          </div>
+        </div>
+        <div class="page__main-block-2 main-block">
+          <div class="main__block-2 _container">
+            <div class="main__block-2 _container">
+              <div class="block-2__content">
+                <div class="content__title">Who we are?</div>
+                <div class="content__text">
+                  <p>
+                    The NGO is a space for psychological rehabilitation and
+                    development. All of its projects are based on the work and
+                    support of dedicated volunteers. Led by a strong belief in
+                    humanity, we encourage everyone to spread kindness and
+                    inspire others!
+                  </p>
+                  <a href="">READ MORE</a>
+                </div>
+              </div>
+              <div class="block-2__slider">
+                <div class="slider__wrapper">
+                  <img
+                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                    alt=""
+                    class="slider__img"
+                  />
+                  <img
+                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                    alt=""
+                    class="slider__img"
+                  />
+
+                  <img
+                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                    alt=""
+                    class="slider__img"
+                  />
+                  <img
+                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                    alt=""
+                    class="slider__img"
+                  />
+                  <img
+                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                    alt=""
+                    class="slider__img"
+                  />
+                  <img
+                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                    alt=""
+                    class="slider__img"
+                  />
+                  <img
+                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                    alt=""
+                    class="slider__img"
+                  />
+                </div>
+              </div>
             </div>
           </div>
         </div>
+
         <div class="main__block-3">
           <h1 class="block-3__title">achievements</h1>
           <div class="block-3__content">
@@ -274,7 +300,7 @@
                 CCB have already arranged 13 successful projects and we intent
                 to create far more!
               </p>
-              <button>SEE ALL</button>
+              <a href="../Projects/index.html">SEE ALL</a>
             </div>
           </div>
           <div class="project__slider">
@@ -337,7 +363,7 @@
                 completely changed their life. Every review was written with all
                 the sincerity!
               </p>
-              <button>SEE ALL</button>
+              <a href="../Reviews/index.html">SEE ALL</a>
             </div>
           </div>
           <div class="project__slider">
@@ -629,7 +655,7 @@
         </div>
         <div class="block__volunteers">
           <h1 class="volunteers__title">Become a volonteer</h1>
-          <button class="volunteers__but">google form</button>
+          <a href="#" class="volunteers__but">google form</a>
         </div>
       </main>
     </div>
