--- a/Main/index.html
+++ b/Main/index.html
@@ -209,59 +209,57 @@
         </div>
         <div class="page__main-block-2 main-block">
           <div class="main__block-2 _container">
-            <div class="main__block-2 _container">
-              <div class="block-2__content">
-                <div class="content__title">Who we are?</div>
-                <div class="content__text">
-                  <p>
-                    The NGO is a space for psychological rehabilitation and
-                    development. All of its projects are based on the work and
-                    support of dedicated volunteers. Led by a strong belief in
-                    humanity, we encourage everyone to spread kindness and
-                    inspire others!
-                  </p>
-                  <a href="">READ MORE</a>
-                </div>
+            <div class="block-2__content">
+              <div class="content__title">Who we are?</div>
+              <div class="content__text">
+                <p>
+                  The NGO is a space for psychological rehabilitation and
+                  development. All of its projects are based on the work and
+                  support of dedicated volunteers. Led by a strong belief in
+                  humanity, we encourage everyone to spread kindness and inspire
+                  others!
+                </p>
+                <a href="">READ MORE</a>
               </div>
-              <div class="block-2__slider">
-                <div class="slider__wrapper">
-                  <img
-                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                    alt=""
-                    class="slider__img"
-                  />
-                  <img
-                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                    alt=""
-                    class="slider__img"
-                  />
+            </div>
+            <div class="block-2__slider">
+              <div class="slider__wrapper">
+                <img
+                  src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                  alt=""
+                  class="slider__img"
+                />
+                <img
+                  src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                  alt=""
+                  class="slider__img"
+                />
 
-                  <img
-                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                    alt=""
-                    class="slider__img"
-                  />
-                  <img
-                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                    alt=""
-                    class="slider__img"
-                  />
-                  <img
-                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                    alt=""
-                    class="slider__img"
-                  />
-                  <img
-                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                    alt=""
-                    class="slider__img"
-                  />
-                  <img
-                    src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
-                    alt=""
-                    class="slider__img"
-                  />
-                </div>
+                <img
+                  src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                  alt=""
+                  class="slider__img"
+                />
+                <img
+                  src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                  alt=""
+                  class="slider__img"
+                />
+                <img
+                  src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                  alt=""
+                  class="slider__img"
+                />
+                <img
+                  src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                  alt=""
+                  class="slider__img"
+                />
+                <img
+                  src="./imgs/fe48e3b7-cceb-47c8-8fed-dad6f7a3f837.jpg"
+                  alt=""
+                  class="slider__img"
+                />
               </div>
             </div>
           </div>
