--- a/Main/index.html
+++ b/Main/index.html
@@ -264,32 +264,36 @@
             </div>
           </div>
         </div>
-
-        <div class="main__block-3">
-          <h1 class="block-3__title">achievements</h1>
-          <div class="block-3__content">
-            <div class="volunteers">
-              <span class="blue__txt">300+</span> volunteers
-            </div>
-            <div class="participants">
-              <span class="blue__txt">330</span> participants
-            </div>
-            <div class="successful-projects-1">
-              <span class="blue__txt">13</span> successful <br />projects
-            </div>
-            <div class="successful-projects-2">
-              <span class="blue__txt">1000</span> successful projects
+        <div class="page__main-block-3 main-block">
+          <div class="main__block-3 _container">
+            <h1 class="block-3__title">achievements</h1>
+            <div class="block-3__content">
+              <div class="volunteers">
+                <span class="blue__txt">300+</span> volunteers
+              </div>
+              <div class="participants">
+                <span class="blue__txt">330</span> participants
+              </div>
+              <div class="successful-projects-1">
+                <span class="blue__txt">13</span> successful <br />projects
+              </div>
+              <div class="successful-projects-2">
+                <span class="blue__txt">1000</span> successful projects
+              </div>
             </div>
           </div>
         </div>
-        <div class="block__video">
-          <h1 class="video__title">Video</h1>
-          <video
-            class="video"
-            controls
-            src="../video/Que Canten Los Niсos. Niсos ucranianos cantan la famosa canciуn espaсola desde Kyiv. - Cultura Contra Balas (1080p, h264, youtube).mp4"
-          ></video>
+        <div class="page__block__video main-block">
+          <div class="block__video _container">
+            <h1 class="video__title">Video</h1>
+            <video
+              class="video"
+              controls
+              src="../video/Que Canten Los Niсos. Niсos ucranianos cantan la famosa canciуn espaсola desde Kyiv. - Cultura Contra Balas (1080p, h264, youtube).mp4"
+            ></video>
+          </div>
         </div>
+
         <div class="block__projects">
           <div class="project__content">
             <h1 class="project__title">Projects</h1>
