--- a/Main/index.html
+++ b/Main/index.html
@@ -283,79 +283,83 @@
             </div>
           </div>
         </div>
-        <div class="page__block__video main-block">
+        <div class="page__block-video main-block">
           <div class="block__video _container">
             <h1 class="video__title">Video</h1>
-            <video
-              class="video"
-              controls
-              src="../video/Que Canten Los Niсos. Niсos ucranianos cantan la famosa canciуn espaсola desde Kyiv. - Cultura Contra Balas (1080p, h264, youtube).mp4"
-            ></video>
+            <div class="video__container">
+              <iframe
+                src="../video/Que Canten Los Niсos. Niсos ucranianos cantan la famosa canciуn espaсola desde Kyiv. - Cultura Contra Balas (1080p, h264, youtube).mp4"
+                frameborder="0"
+                class="video"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="page__block-projects main-block">
+          <div class="block__projects _container">
+            <div class="project__content">
+              <h1 class="project__title">Projects</h1>
+              <div class="project__text">
+                <p>
+                  CCB have already arranged 13 successful projects and we intent
+                  to create far more!
+                </p>
+                <a href="../Projects/index.html">SEE ALL</a>
+              </div>
+            </div>
+            <div class="project__slider">
+              <div id="slider1" class="slider__cards">
+                <div class="slider__card">
+                  <div class="card__img"></div>
+                  <div class="card__info">
+                    <h2>Recovery and the Power of Women</h2>
+                    <p>september 2024</p>
+                  </div>
+                </div>
+                <div class="slider__card">
+                  <div class="card__img"></div>
+                  <div class="card__info">
+                    <h2>Recovery and the Power of Women</h2>
+                    <p>september 2024</p>
+                  </div>
+                </div>
+                <div class="slider__card">
+                  <div class="card__img"></div>
+                  <div class="card__info">
+                    <h2>Recovery and the Power of Women</h2>
+                    <p>september 2024</p>
+                  </div>
+                </div>
+                <div class="slider__card">
+                  <div class="card__img"></div>
+                  <div class="card__info">
+                    <h2>Recovery and the Power of Women</h2>
+                    <p>september 2024</p>
+                  </div>
+                </div>
+                <div class="slider__card">
+                  <div class="card__img"></div>
+                  <div class="card__info">
+                    <h2>Recovery and the Power of Women</h2>
+                    <p>september 2024</p>
+                  </div>
+                </div>
+                <div class="slider__card">
+                  <div class="card__img"></div>
+                  <div class="card__info">
+                    <h2>Recovery and the Power of Women</h2>
+                    <p>september 2024</p>
+                  </div>
+                </div>
+              </div>
+              <div class="slider__buttons">
+                <button class="arrow__left nav__btn"><</button>
+                <button class="arrow__right nav__btn">></button>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="block__projects">
-          <div class="project__content">
-            <h1 class="project__title">Projects</h1>
-            <div class="project__text">
-              <p>
-                CCB have already arranged 13 successful projects and we intent
-                to create far more!
-              </p>
-              <a href="../Projects/index.html">SEE ALL</a>
-            </div>
-          </div>
-          <div class="project__slider">
-            <div id="slider1" class="slider__cards">
-              <div class="slider__card">
-                <div class="card__img"></div>
-                <div class="card__info">
-                  <h2>Recovery and the Power of Women</h2>
-                  <p>september 2024</p>
-                </div>
-              </div>
-              <div class="slider__card">
-                <div class="card__img"></div>
-                <div class="card__info">
-                  <h2>Recovery and the Power of Women</h2>
-                  <p>september 2024</p>
-                </div>
-              </div>
-              <div class="slider__card">
-                <div class="card__img"></div>
-                <div class="card__info">
-                  <h2>Recovery and the Power of Women</h2>
-                  <p>september 2024</p>
-                </div>
-              </div>
-              <div class="slider__card">
-                <div class="card__img"></div>
-                <div class="card__info">
-                  <h2>Recovery and the Power of Women</h2>
-                  <p>september 2024</p>
-                </div>
-              </div>
-              <div class="slider__card">
-                <div class="card__img"></div>
-                <div class="card__info">
-                  <h2>Recovery and the Power of Women</h2>
-                  <p>september 2024</p>
-                </div>
-              </div>
-              <div class="slider__card">
-                <div class="card__img"></div>
-                <div class="card__info">
-                  <h2>Recovery and the Power of Women</h2>
-                  <p>september 2024</p>
-                </div>
-              </div>
-            </div>
-            <div class="slider__buttons">
-              <button class="arrow__left nav__btn"><</button>
-              <button class="arrow__right nav__btn">></button>
-            </div>
-          </div>
-        </div>
         <div class="block__projects">
           <div class="project__content">
             <h1 class="project__title">Reviews</h1>
