--- a/Main/index.html
+++ b/Main/index.html
@@ -592,75 +592,77 @@
             </div>
           </div>
         </div>
-
-        <div class="block__social">
-          <h1 class="social__title">social media</h1>
-          <div class="social__media">
-            <div class="facebook">
-              <svg
-                fill="#000000"
-                viewBox="0 0 32 32"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                <g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                ></g>
-                <g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M21.95 5.005l-3.306-.004c-3.206 0-5.277 2.124-5.277 5.415v2.495H10.05v4.515h3.317l-.004 9.575h4.641l.004-9.575h3.806l-.003-4.514h-3.803v-2.117c0-1.018.241-1.533 1.566-1.533l2.366-.001.01-4.256z"
-                  ></path>
-                </g>
-              </svg>
-            </div>
-            <div class="instagram">
-              <svg
-                xmlns="http://www.w3.org/2000  /svg"
-                viewBox="0 0 409.61 409.61"
-                class="icon-instagram"
-              >
-                <g>
-                  <path
-                    d="M307.205 0h-204.8C46.09 0 .005 46.085.005 102.4v204.81c0 56.3 46.085 102.4 102.4 102.4h204.8c56.315 0 102.4-46.1 102.4-102.4V102.4c0-56.315-46.085-102.4-102.4-102.4zm68.265 307.21c0 37.632-30.612 68.265-68.265 68.265h-204.8c-37.637 0-68.265-30.633-68.265-68.265V102.4c0-37.642 30.628-68.265 68.265-68.265h204.8c37.653 0 68.265 30.623 68.265 68.265v204.81z"
-                  />
-                  <circle cx="315.755" cy="93.865" r="25.6" />
-                  <path
-                    d="M204.805 102.4c-56.566 0-102.4 45.839-102.4 102.4 0 56.54 45.834 102.41 102.4 102.41 56.55 0 102.4-45.87 102.4-102.41 0-56.561-45.85-102.4-102.4-102.4zm0 170.675c-37.699 0-68.265-30.566-68.265-68.275s30.566-68.265 68.265-68.265 68.265 30.556 68.265 68.265-30.566 68.275-68.265 68.275z"
-                  />
-                </g>
-              </svg>
-            </div>
-            <div class="telegram">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 512 512"
-                class="icon-telegram"
-              >
-                <g>
-                  <path
-                    fill-rule="nonzero"
-                    d="m512 50.49-80.98 408.28s-11.32 28.31-42.47 14.72L200.84 329.82c25.23-22.68 220.96-198.65 229.52-206.63 13.23-12.35 5.02-19.7-10.36-10.36l-289.11 183.6-111.54-37.55S1.79 252.65.1 239.06c-1.7-13.59 19.82-20.95 19.82-20.95L474.63 39.73S512 23.31 512 50.49z"
-                  />
-                </g>
-              </svg>
-            </div>
-            <div class="linkedin">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 438.536 438.535"
-                class="icon-linkedin"
-              >
-                <g>
-                  <path
-                    d="M5.424 145.895H99.64v282.932H5.424zM408.842 171.739c-19.791-21.604-45.967-32.408-78.512-32.408-11.991 0-22.891 1.475-32.695 4.427-9.801 2.95-18.079 7.089-24.838 12.419-6.755 5.33-12.135 10.278-16.129 14.844-3.798 4.337-7.512 9.389-11.136 15.104v-40.232h-93.935l.288 13.706c.193 9.139.288 37.307.288 84.508 0 47.205-.19 108.777-.572 184.722h93.931V270.942c0-9.705 1.041-17.412 3.139-23.127 4-9.712 10.037-17.843 18.131-24.407 8.093-6.572 18.13-9.855 30.125-9.855 16.364 0 28.407 5.662 36.117 16.987 7.707 11.324 11.561 26.98 11.561 46.966V428.82h93.931V266.664c-.007-41.688-9.897-73.328-29.694-94.925zM53.103 9.708c-15.796 0-28.595 4.619-38.4 13.848C4.899 32.787 0 44.441 0 58.529 0 72.42 4.758 84.034 14.275 93.358c9.514 9.325 22.078 13.99 37.685 13.99h.571c15.99 0 28.887-4.661 38.688-13.99 9.801-9.324 14.606-20.934 14.417-34.829-.19-14.087-5.047-25.742-14.561-34.973C81.562 14.323 68.9 9.708 53.103 9.708z"
-                  />
-                </g>
-              </svg>
+        <div class="page__block-social main-block">
+          <div class="block__social _container">
+            <h1 class="social__title">social media</h1>
+            <div class="social__media">
+              <div class="facebook">
+                <svg
+                  fill="#000000"
+                  viewBox="0 0 32 32"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M21.95 5.005l-3.306-.004c-3.206 0-5.277 2.124-5.277 5.415v2.495H10.05v4.515h3.317l-.004 9.575h4.641l.004-9.575h3.806l-.003-4.514h-3.803v-2.117c0-1.018.241-1.533 1.566-1.533l2.366-.001.01-4.256z"
+                    ></path>
+                  </g>
+                </svg>
+              </div>
+              <div class="instagram">
+                <svg
+                  xmlns="http://www.w3.org/2000  /svg"
+                  viewBox="0 0 409.61 409.61"
+                  class="icon-instagram"
+                >
+                  <g>
+                    <path
+                      d="M307.205 0h-204.8C46.09 0 .005 46.085.005 102.4v204.81c0 56.3 46.085 102.4 102.4 102.4h204.8c56.315 0 102.4-46.1 102.4-102.4V102.4c0-56.315-46.085-102.4-102.4-102.4zm68.265 307.21c0 37.632-30.612 68.265-68.265 68.265h-204.8c-37.637 0-68.265-30.633-68.265-68.265V102.4c0-37.642 30.628-68.265 68.265-68.265h204.8c37.653 0 68.265 30.623 68.265 68.265v204.81z"
+                    />
+                    <circle cx="315.755" cy="93.865" r="25.6" />
+                    <path
+                      d="M204.805 102.4c-56.566 0-102.4 45.839-102.4 102.4 0 56.54 45.834 102.41 102.4 102.41 56.55 0 102.4-45.87 102.4-102.41 0-56.561-45.85-102.4-102.4-102.4zm0 170.675c-37.699 0-68.265-30.566-68.265-68.275s30.566-68.265 68.265-68.265 68.265 30.556 68.265 68.265-30.566 68.275-68.265 68.275z"
+                    />
+                  </g>
+                </svg>
+              </div>
+              <div class="telegram">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512"
+                  class="icon-telegram"
+                >
+                  <g>
+                    <path
+                      fill-rule="nonzero"
+                      d="m512 50.49-80.98 408.28s-11.32 28.31-42.47 14.72L200.84 329.82c25.23-22.68 220.96-198.65 229.52-206.63 13.23-12.35 5.02-19.7-10.36-10.36l-289.11 183.6-111.54-37.55S1.79 252.65.1 239.06c-1.7-13.59 19.82-20.95 19.82-20.95L474.63 39.73S512 23.31 512 50.49z"
+                    />
+                  </g>
+                </svg>
+              </div>
+              <div class="linkedin">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 438.536 438.535"
+                  class="icon-linkedin"
+                >
+                  <g>
+                    <path
+                      d="M5.424 145.895H99.64v282.932H5.424zM408.842 171.739c-19.791-21.604-45.967-32.408-78.512-32.408-11.991 0-22.891 1.475-32.695 4.427-9.801 2.95-18.079 7.089-24.838 12.419-6.755 5.33-12.135 10.278-16.129 14.844-3.798 4.337-7.512 9.389-11.136 15.104v-40.232h-93.935l.288 13.706c.193 9.139.288 37.307.288 84.508 0 47.205-.19 108.777-.572 184.722h93.931V270.942c0-9.705 1.041-17.412 3.139-23.127 4-9.712 10.037-17.843 18.131-24.407 8.093-6.572 18.13-9.855 30.125-9.855 16.364 0 28.407 5.662 36.117 16.987 7.707 11.324 11.561 26.98 11.561 46.966V428.82h93.931V266.664c-.007-41.688-9.897-73.328-29.694-94.925zM53.103 9.708c-15.796 0-28.595 4.619-38.4 13.848C4.899 32.787 0 44.441 0 58.529 0 72.42 4.758 84.034 14.275 93.358c9.514 9.325 22.078 13.99 37.685 13.99h.571c15.99 0 28.887-4.661 38.688-13.99 9.801-9.324 14.606-20.934 14.417-34.829-.19-14.087-5.047-25.742-14.561-34.973C81.562 14.323 68.9 9.708 53.103 9.708z"
+                    />
+                  </g>
+                </svg>
+              </div>
             </div>
           </div>
         </div>
+
         <div class="block__volunteers">
           <h1 class="volunteers__title">Become a volonteer</h1>
           <a href="#" class="volunteers__but">google form</a>
