--- a/Main/index.html
+++ b/Main/index.html
@@ -352,9 +352,11 @@
                   </div>
                 </div>
               </div>
-              <div class="slider__buttons">
-                <button class="arrow__left nav__btn"><</button>
-                <button class="arrow__right nav__btn">></button>
+              <div class="slider__buttons-box">
+                <div class="slider__buttons">
+                  <button class="arrow__left nav__btn"><</button>
+                  <button class="arrow__right nav__btn">></button>
+                </div>
               </div>
             </div>
           </div>
@@ -585,9 +587,11 @@
                   </div>
                 </div>
               </div>
-              <div class="slider__buttons">
-                <button class="arrow__left nav__btn"><</button>
-                <button class="arrow__right nav__btn">></button>
+              <div class="slider__buttons-box">
+                <div class="slider__buttons">
+                  <button class="arrow__left nav__btn"><</button>
+                  <button class="arrow__right nav__btn">></button>
+                </div>
               </div>
             </div>
           </div>
