--- a/Main/index.html
+++ b/Main/index.html
@@ -666,10 +666,11 @@
             </div>
           </div>
         </div>
-
-        <div class="block__volunteers">
-          <h1 class="volunteers__title">Become a volonteer</h1>
-          <a href="#" class="volunteers__but">google form</a>
+        <div class="page__block-volunteers main-block">
+          <div class="block__volunteers _container">
+            <h1 class="volunteers__title">Become a volonteer</h1>
+            <a href="#" class="volunteers__but">google form</a>
+          </div>
         </div>
       </main>
     </div>
