--- a/Main/index.html
+++ b/Main/index.html
@@ -268,16 +268,16 @@
           <div class="main__block-3 _container">
             <h1 class="block-3__title">achievements</h1>
             <div class="block-3__content">
-              <div class="volunteers">
+              <div class="content__circle volunteers">
                 <span class="blue__txt">300+</span> volunteers
               </div>
-              <div class="participants">
+              <div class="content__circle participants">
                 <span class="blue__txt">330</span> participants
               </div>
-              <div class="successful-projects-1">
+              <div class="content__circle successful-projects-1">
                 <span class="blue__txt">13</span> successful <br />projects
               </div>
-              <div class="successful-projects-2">
+              <div class="content__circle successful-projects-2">
                 <span class="blue__txt">1000</span> successful projects
               </div>
             </div>
