--- a/Main/index.html
+++ b/Main/index.html
@@ -122,7 +122,7 @@
           <nav class="header__nav">
             <ul class="nav__list">
               <li class="list__item">
-                <a href="../Projects/index.html" class="nav__link">PROJECT</a>
+                <a href="../Projects/index.html" class="nav__link">PROJECTS</a>
               </li>
               <li class="list__item">
                 <a href="" class="nav__link">TEAM</a>
