--- a/Projects/index.html
+++ b/Projects/index.html
@@ -424,12 +424,14 @@
           </div>
           <div class="footer__bot">
             <p class="bot__2024">© 2024</p>
-            <a class="bot__design">Design</a>
-            <div class="bot__group">
-              <a class="bot__icon">TG</a>
-              <a class="bot__icon">FB</a>
-              <a class="bot__icon">TT</a>
-              <a class="bot__icon">LN</a>
+            <div class="bot__box">
+              <a class="bot__design">Design</a>
+              <div class="bot__group">
+                <a class="bot__icon">TG</a>
+                <a class="bot__icon">FB</a>
+                <a class="bot__icon">TT</a>
+                <a class="bot__icon">LN</a>
+              </div>
             </div>
           </div>
         </div>
