--- a/Project Example/index.html
+++ b/Project Example/index.html
@@ -125,19 +125,19 @@
                 <a href="../Projects/index.html" class="nav__link">PROJECTS</a>
               </li>
               <li class="list__item">
-                <a href="" class="nav__link">TEAM</a>
+                <a href="../Team/index.html" class="nav__link">TEAM</a>
               </li>
               <li class="list__item">
-                <a href="" class="nav__link">ABOUT US</a>
+                <a href="../About Us/index.html" class="nav__link">ABOUT US</a>
               </li>
               <li class="list__item">
-                <a href="" class="nav__link">CONTACT US</a>
+                <a href="../Contact Us/" class="nav__link">CONTACT US</a>
               </li>
               <li class="list__item">
-                <a href="" class="nav__link">HISTORY</a>
+                <a href="../History/index.html" class="nav__link">HISTORY</a>
               </li>
               <li class="list__item">
-                <a href="" class="nav__link">REVIEWS</a>
+                <a href="../Reviews/index.html" class="nav__link">REVIEWS</a>
               </li>
               <li class="list__item">
                 <div class="language-dropdown">
