--- a/Team/index.html
+++ b/Team/index.html
@@ -628,6 +628,10 @@
           </div>
         </div>
       </div>
+      <div class="block__volunteers _container">
+        <h1 class="volunteers__title">Become a volonteer</h1>
+        <a href="#" class="volunteers__but">google form</a>
+      </div>
       <footer class="footer">
         <div class="footer__body _container">
           <div class="footer__top">
