--- a/About Us/index.html
+++ b/About Us/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../Main/style.css" />
+    <link rel="stylesheet" href="../Team/style.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -198,17 +199,152 @@
         </div>
       </header>
       <div class="about__us _container">
-        <div class="abouts__us-head">
+        <div class="about__us-head">
           <div class="content__info">
             <h1 class="about__us-title">about us</h1>
             <p class="about__us-paragraph">
               Cultura Contra Balas (CCB) is a non-profit organization that uses
               culture as a tool against violence.
             </p>
-            <img src="./image/bird_about_us.png" alt="" class="about__us-img" />
+            <img src="./image/Golub.krula 1.png" alt="" class="about__us-img" />
           </div>
           <div class="content__img"></div>
         </div>
+        <div class="about__us-blue">
+          <p>
+            We help those who <br />
+            help others
+          </p>
+        </div>
+        <div class="about__us-volunteers">
+          <div class="volunteers__top">
+            <div class="top__title">
+              <h1>kindness volunteers</h1>
+              <div class="title__imgs">
+                <img
+                  src="./image/holub.flamenko (1) 1.png"
+                  alt=""
+                  class="img__flamenko"
+                />
+                <img src="./image/Mask group.png" alt="" class="img__guitar" />
+              </div>
+            </div>
+            <p class="top__text">
+              Through cultural and educational events, CCB unites Spain and
+              countries affected by armed conflict. The NGO is a space for
+              psychological rehabilitation and development. All of its projects
+              are based on the work and support of dedicated volunteers. Led by
+              a strong belief in humanity, we encourage everyone to spread
+              kindness and inspire others!
+            </p>
+          </div>
+          <div class="volunteers__bot">
+            <div class="bot__img small"></div>
+            <div class="bot__img big"></div>
+            <div class="bot__img small"></div>
+            <div class="bot__img small"></div>
+            <div class="bot__img small"></div>
+            <div class="bot__img big"></div>
+          </div>
+        </div>
+        <div class="team__block-2">
+          <h2 class="our__founder-title">Nataliya Moskalenko</h2>
+          <div class="our__founder-block">
+            <img
+              class="our__founder-img script__img"
+              src="../Team/img/founder.png"
+              alt=""
+            />
+            <div class="our__founder-content">
+              <h5 class="content__subtitle">
+                Founder of the public organization Cultura Соntra Вalas. She
+                dedicates her life to helping others through culture and
+                education.
+              </h5>
+              <p class="content__paragraph">
+                Born in Ukraine, she studied in the United States, then worked
+                in Austria, and currently resides in Spain, where she actively
+                engages in volunteer activities. <br />
+                <br />
+                The primary goal of her organization is to support individuals
+                who have experienced psychological trauma due to armed conflict.
+                One of the main projects is rehabilitation camps for children
+                who are victims of conflict, as well as for women and combat
+                medics in need of psychological support. <br />
+                <br />
+                Nataliya believes in the power of culture, making cultural
+                projects—such as concerts and artistic events—an essential part
+                of her work. These initiatives not only benefit those affected
+                but also unite people from diverse cultures. One such event
+                featured Ukrainian children performing the well-known song “Let
+                the Children Sing” by José Luis Perales in Madrid. <br />
+                <br />
+                Her activities also include collecting humanitarian aid and
+                organizing charitable events that emphasize the unity of nations
+                and cultures. These events promote awareness of the importance
+                of supporting those affected by war and engage new participants.
+                <br />
+                <br />
+                Nataliya remains optimistic and strives to contribute to a
+                peaceful future through concrete actions that help people
+                recover from the horrors of war and build a new life filled with
+                hope and opportunities.
+              </p>
+              <div class="content__social-media">
+                <svg
+                  width="50"
+                  height="50"
+                  viewBox="0 0 50 50"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect width="50" height="50" fill="#FFFEF7" />
+                  <path
+                    d="M34.3556 6.25H14.7985C9.39549 6.25 5 10.6468 5 16.0514V33.9486C5 39.3532 9.39549 43.75 14.7985 43.75H34.3556C39.7587 43.75 44.1542 39.3532 44.1542 33.9486V16.0514C44.1542 10.6468 39.7587 6.25 34.3556 6.25ZM8.4566 16.0514C8.4566 12.5539 11.302 9.70762 14.7985 9.70762H34.3556C37.8521 9.70762 40.6976 12.5539 40.6976 16.0514V33.9486C40.6976 37.4461 37.8521 40.2924 34.3556 40.2924H14.7985C11.302 40.2924 8.4566 37.4461 8.4566 33.9486V16.0514Z"
+                    fill="#2E2E2E"
+                  />
+                  <path
+                    d="M24.5791 34.1146C29.6035 34.1146 33.6934 30.0257 33.6934 24.9977C33.6934 19.9696 29.6057 15.8807 24.5791 15.8807C19.5525 15.8807 15.4648 19.9696 15.4648 24.9977C15.4648 30.0257 19.5525 34.1146 24.5791 34.1146ZM24.5791 19.3406C27.6991 19.3406 30.2368 21.879 30.2368 24.9999C30.2368 28.1208 27.6991 30.6592 24.5791 30.6592C21.4591 30.6592 18.9214 28.1208 18.9214 24.9999C18.9214 21.879 21.4591 19.3406 24.5791 19.3406Z"
+                    fill="#2E2E2E"
+                  />
+                  <path
+                    d="M34.5358 17.3537C35.8888 17.3537 36.9915 16.2528 36.9915 14.8972C36.9915 13.5417 35.891 12.4408 34.5358 12.4408C33.1806 12.4408 32.0801 13.5417 32.0801 14.8972C32.0801 16.2528 33.1806 17.3537 34.5358 17.3537Z"
+                    fill="#2E2E2E"
+                  />
+                </svg>
+                <svg
+                  width="50"
+                  height="50"
+                  viewBox="0 0 50 50"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M28.2942 14.6999V19.9869H34.8325L33.7972 27.1087H28.2942V43.517C27.1909 43.6701 26.0621 43.75 24.9162 43.75C23.5936 43.75 22.2948 43.6446 21.03 43.4405V27.1087H15V19.9869H21.03V13.5181C21.03 9.50482 24.2821 6.25 28.2959 6.25V6.2534C28.3078 6.2534 28.318 6.25 28.3299 6.25L34.8342 6.25V12.4093H30.5841C29.321 12.4093 28.2959 13.4347 28.2959 14.6982L28.2942 14.6999Z"
+                    fill="#2E2E2E"
+                  />
+                </svg>
+
+                <svg
+                  width="50"
+                  height="50"
+                  viewBox="0 0 50 50"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7.23521 24.9253C7.32133 24.8837 7.40748 24.8441 7.49145 24.8067C8.95115 24.1532 10.4302 23.5413 11.9072 22.9294C11.9868 22.9294 12.1203 22.8399 12.1956 22.8108C12.3097 22.7629 12.4238 22.7171 12.538 22.6693C12.7576 22.5777 12.9772 22.4882 13.1946 22.3966C13.6338 22.2155 14.0708 22.0345 14.51 21.8534L17.1388 20.7649C18.8913 20.0406 20.646 19.3143 22.3985 18.59C24.151 17.8657 25.9056 17.1394 27.6581 16.4151C29.4106 15.6908 31.1653 14.9645 32.9178 14.2402C34.6703 13.5159 36.425 12.7896 38.1775 12.0653C38.5672 11.903 38.9891 11.6615 39.4068 11.5908C39.7577 11.5304 40.1 11.4139 40.4531 11.3494C41.1227 11.2266 41.8611 11.1766 42.5027 11.4451C42.7245 11.5388 42.929 11.6699 43.0991 11.8343C43.9129 12.6127 43.7988 13.8906 43.6265 14.9853C42.4273 22.6151 41.2282 30.2471 40.0268 37.8769C39.8632 38.9238 39.6393 40.0726 38.7846 40.7344C38.0612 41.2943 37.032 41.3567 36.1386 41.1195C35.2451 40.8801 34.4571 40.3785 33.6842 39.8853C30.4785 37.8332 27.2706 35.7811 24.0649 33.729C23.3027 33.242 22.4545 32.6051 22.4631 31.7206C22.4674 31.1878 22.7968 30.7133 23.1326 30.2908C25.9185 26.7776 29.9381 24.3634 32.9285 21.0126C33.3505 20.5401 33.6821 19.6868 33.1029 19.4142C32.7585 19.2518 32.3623 19.4725 32.048 19.6827C28.0951 22.3362 24.1445 24.9919 20.1917 27.6455C18.9021 28.5113 17.55 29.4021 15.9956 29.6144C14.6048 29.8058 13.2054 29.4312 11.8598 29.0483C10.7316 28.7277 9.60562 28.3989 8.48393 28.0597C7.88756 27.8807 7.27182 27.6871 6.81108 27.2813C6.35035 26.8754 6.08557 26.1928 6.36331 25.6517C6.53769 25.3124 6.87571 25.0981 7.23095 24.9232L7.23521 24.9253Z"
+                    fill="#2E2E2E"
+                  />
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="block__volunteers _container">
+        <h1 class="volunteers__title">Become a volonteer</h1>
+        <a href="#" class="volunteers__but">google form</a>
       </div>
       <footer class="footer">
         <div class="footer__body _container">
